--- a/app/src/main/res/layout/activity_google_auth.xml
+++ b/app/src/main/res/layout/activity_google_auth.xml
@@ -5,6 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".GoogleAuthActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="30dp"
+        android:text="EasyTrack Authenticator"
+        android:textSize="26sp" />
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googleSignInButton"
         android:layout_width="wrap_content"
