major bugfix (+ 'continue with' button added)

--- a/app/src/main/res/layout/activity_google_auth.xml
+++ b/app/src/main/res/layout/activity_google_auth.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GoogleAuthActivity">
+    tools:context=".GoogleAuthActivity"
+    tools:ignore="HardcodedText">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,9 +17,17 @@
         android:textSize="26sp" />
 
     <com.google.android.gms.common.SignInButton
+        android:id="@+id/continueWithGoogleAccountButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="20dp" />
+
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/googleSignInButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/continueWithGoogleAccountButton"
         android:layout_centerInParent="true" />
 
 </RelativeLayout>
