--- a/app/src/main/res/layout/activity_google_auth.xml
+++ b/app/src/main/res/layout/activity_google_auth.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".GoogleAuthActivity"
     tools:ignore="HardcodedText">
 
@@ -13,7 +14,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="36dp"
         android:layout_marginBottom="30dp"
+        android:gravity="center_horizontal"
         android:text="EasyTrack Authenticator"
+        android:textColor="#444"
         android:textSize="26sp" />
 
     <com.google.android.gms.common.SignInButton
